--- a/html/portfolio2.html
+++ b/html/portfolio2.html
@@ -74,12 +74,6 @@
   <br>
   <div class="pag_center">
     <div class="pagination">
-      <a href="portfolio.html">&laquo;</a>
-      <a href="portfolio.html">1</a>
-      <a class="active" href="portfolio2.html">2</a>
-      <a href="portfolio3.html">3</a>
-      <a href="portfolio4.html">4</a>
-      <a href="portfolio3.html">&raquo;</a>
     </div>
   </div>
 
@@ -242,12 +236,6 @@
   <!-- Pagination Menu -->
   <div class="pag_center">
     <div class="pagination">
-      <a href="portfolio.html">&laquo;</a>
-      <a href="portfolio.html">1</a>
-      <a class="active" href="portfolio2.html">2</a>
-      <a href="portfolio3.html">3</a>
-      <a href="portfolio4.html">4</a>
-      <a href="portfolio3.html">&raquo;</a>
     </div>
   </div>
 
@@ -262,6 +250,11 @@
   <script src="../js/resume.min.js"></script>
   <script src="../js/gallery.js"></script>
 
+    <!-- Mustache.js for Templating   -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/mustache.js/2.3.0/mustache.min.js"></script>
+
+    <!-- Pagination JS -->
+    <script src="../js/pagination.js"></script>
 </body>
 
 </html>
