--- a/html/portfolio4.html
+++ b/html/portfolio4.html
@@ -75,12 +75,6 @@
   <br/>
   <div class="pag_center">
     <div class="pagination">
-      <a href="portfolio3.html">&laquo;</a>
-      <a href="portfolio.html">1</a>
-      <a href="portfolio2.html">2</a>
-      <a href="portfolio3.html">3</a>
-      <a class="active" href="portfolio4.html">4</a>
-      <!--<a href="portfolio3.html">&raquo;</a>-->
     </div>
   </div>
 
@@ -142,12 +136,6 @@
   <!-- Pagination Menu -->
   <div class="pag_center">
     <div class="pagination">
-      <a href="portfolio3.html">&laquo;</a>
-      <a href="portfolio.html">1</a>
-      <a href="portfolio2.html">2</a>
-      <a href="portfolio3.html">3</a>
-      <a class="active" href="portfolio4.html">4</a>
-      <!--<a href="portfolio3.html">&raquo;</a>-->
     </div>
   </div>
 
@@ -161,6 +149,12 @@
   <!-- Custom scripts for this template -->
   <script src="../js/resume.min.js"></script>
   <script src="../js/gallery.js"></script>
+
+    <!-- Mustache.js for Templating   -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/mustache.js/2.3.0/mustache.min.js"></script>
+
+    <!-- Pagination JS -->
+    <script src="../js/pagination.js"></script>
 
 </body>
 
