Updated brand message

--- a/index.html
+++ b/index.html
@@ -82,7 +82,8 @@
         <div class="subheading mb-5">
           <a href="mailto:sshatzkin@uchicago.edu">sshatzkin@uchicago.edu</a>
         </div>
-        <p class="lead mb-5">I'm a software engineer excited about many different things! If you'd like to learn about them, you've come to the right place!</p>
+        <p class="lead mb-2">I'm a software engineer with a specialization in human-computer interaction. I love the startup world and developing exciting new projects.</p>
+        <p class="lead mb-5">If you'd like to learn more about some of my projects, you've come to the right place!</p>
         <div class="social-icons">
           <a href="https://www.linkedin.com/in/samshatzkin/">
             <i class="fab fa-linkedin-in"></i>
