Updated Certificate section, removed unnecessary spaces

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
           <a class="nav-link js-scroll-trigger" href="#interests">Just for fun</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link js-scroll-trigger" href="#awards">Awards</a>
+          <a class="nav-link js-scroll-trigger" href="#awards">Awards and Certs</a>
         </li>
       </ul>
     </div>
@@ -82,7 +82,7 @@
         <div class="subheading mb-5">
           <a href="mailto:sshatzkin@uchicago.edu">sshatzkin@uchicago.edu</a>
         </div>
-        <p class="lead mb-2">I'm a software engineer with a specialization in human-computer interaction. I love the startup world and developing exciting new projects.</p>
+        <p class="lead mb-2">I'm a software engineer with a specialization in human-computer interaction and a passion for artificial intelligence. I love the startup world and solving hard technical problems.</p>
         <p class="lead mb-5">If you'd like to learn more about some of my projects, you've come to the right place!</p>
         <div class="social-icons">
           <a href="https://www.linkedin.com/in/samshatzkin/">
@@ -476,8 +476,8 @@
 
     <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="awards">
       <div class="w-100">
-        <h2 class="mb-5">Awards &amp; Certifications</h2>
-        <ul class="fa-ul mb-0">
+        <h2 class="mb-4">Awards</h2>
+        <ul class="fa-ul mb-5">
           <li>
             <i class="fa-li fa fa-trophy text-warning"></i> Dean's List 2018-2019 Academic Year
           </li>
@@ -486,6 +486,16 @@
           </li>
           <li>
             <i class="fa-li fa fa-trophy text-warning"></i> Award for Display of Outstanding Entrepeneurship, Big Idea - Summer 2014
+          </li>
+        </ul>
+
+        <h2 class="mb-4">Certifications</h2>
+        <ul class="fa-ul mb-0">
+          <li>
+            <i class="fa-li fa fa-certificate text-warning"></i> Microsoft Certified: Azure AI Fundamentals (In Progress) 
+          </li>
+          <li>
+            <i class="fa-li fa fa-certificate text-warning"></i> Udemy Java Programming Masterclass (In Progress)
           </li>
         </ul>
       </div>
