Enhance portfolio styling and functionality
- Updated HTML files (portfolio.html, portfolio2.html, portfolio3.html, portfolio4.html, portfolio_item.html) to include new font preconnects and custom fonts for a neon-green sci-fi theme.
- Replaced profile picture in index.html with a new drawing version.
- Improved navigation and pagination structure across portfolio pages.
- Added new CSS classes for better styling of portfolio items.
- Introduced a new image file (ProfilePic-drawing.png) for the profile picture.
- Refactored JavaScript (portfolio.js) to enhance portfolio item display with new classes.

--- a/html/portfolio.html
+++ b/html/portfolio.html
@@ -12,11 +12,17 @@
 
    <!-- Favicon -->
    <link rel="shortcut icon" type="image/x-icon" href="favicon.ico?">
-
   <!-- Bootstrap core CSS -->
   <link href="../vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
-  <!-- Custom fonts for this template -->
+  <!-- Font preconnects -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+
+  <!-- Custom fonts for neon-green sci-fi theme -->
+  <link href="https://fonts.googleapis.com/css2?family=Fredericka+the+Great&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Space+Mono:wght@400;700&family=IM+Fell+DW+Pica:ital,wght@0,400;1,400&display=swap" rel="stylesheet">
+  <!-- Keep existing font for fallback -->
   <link href="https://fonts.googleapis.com/css?family=Saira+Extra+Condensed:500,700" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Muli:400,400i,800,800i" rel="stylesheet">
   <link href="../vendor/fontawesome-free/css/all.min.css" rel="stylesheet">
