--- a/index.html
+++ b/index.html
@@ -17,7 +17,20 @@
     <!-- Bootstrap core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet" />
 
-    <!-- Custom fonts for this template -->
+    <!-- Font preconnects -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+
+    <!-- Custom fonts for neon-green sci-fi theme -->
+    <link
+      href="https://fonts.googleapis.com/css2?family=Fredericka+the+Great&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Space+Mono:wght@400;700&family=IM+Fell+DW+Pica:ital,wght@0,400;1,400&display=swap"
+      rel="stylesheet"
+    />
+    <!-- Keep existing font for fallback -->
     <link
       href="https://fonts.googleapis.com/css?family=Saira+Extra+Condensed:500,700"
       rel="stylesheet"
@@ -45,7 +58,7 @@
         <span class="d-none d-lg-block">
           <img
             class="img-fluid img-profile rounded-circle mx-auto mb-2"
-            src="img/ProfilePic.png"
+            src="img/ProfilePic-drawing.png"
             alt=""
           />
         </span>
@@ -103,9 +116,7 @@
             Sam
             <span class="text-primary">Shatzkin</span>
           </h1>
-          <div class="subheading mb-5">
-            <a href="mailto:sshatzkin@uchicago.edu">sshatzkin@uchicago.edu</a>
-          </div>
+          <div class="subheading mb-5"></div>
           <p class="lead mb-2">
             I'm a software engineer with a specialization in human-computer
             interaction and a passion for artificial intelligence. I love the
