--- a/html/portfolio2.html
+++ b/html/portfolio2.html
@@ -12,11 +12,17 @@
 
    <!-- Favicon -->
    <link rel="shortcut icon" type="image/x-icon" href="favicon.ico?">
-
   <!-- Bootstrap core CSS -->
   <link href="../vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
-  <!-- Custom fonts for this template -->
+  <!-- Font preconnects -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+
+  <!-- Custom fonts for neon-green sci-fi theme -->
+  <link href="https://fonts.googleapis.com/css2?family=Fredericka+the+Great&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Space+Mono:wght@400;700&family=IM+Fell+DW+Pica:ital,wght@0,400;1,400&display=swap" rel="stylesheet">
+  <!-- Keep existing font for fallback -->
   <link href="https://fonts.googleapis.com/css?family=Saira+Extra+Condensed:500,700" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Muli:400,400i,800,800i" rel="stylesheet">
   <link href="../vendor/fontawesome-free/css/all.min.css" rel="stylesheet">
