--- a/html/portfolio_item.html
+++ b/html/portfolio_item.html
@@ -1,55 +1,90 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="utf-8" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, shrink-to-fit=no"
+    />
+    <meta name="description" content="Sam Shatzkin's Resume" />
+    <meta name="author" content="Sam Shatzkin" />
 
-<head>
+    <title>Sam Shatzkin's Portfolio</title>
 
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <meta name="description" content="Sam Shatzkin's Resume">
-  <meta name="author" content="Sam Shatzkin">
+    <!-- Favicon -->
+    <link rel="shortcut icon" type="image/x-icon" href="favicon.ico?" />
+    <!-- Bootstrap core CSS -->
+    <link href="../vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet" />
 
-  <title>Sam Shatzkin's Portfolio</title>
+    <!-- Font preconnects -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
 
-  <!-- Favicon -->
-  <link rel="shortcut icon" type="image/x-icon" href="favicon.ico?">
+    <!-- Custom fonts for neon-green sci-fi theme -->
+    <link
+      href="https://fonts.googleapis.com/css2?family=Fredericka+the+Great&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Space+Mono:wght@400;700&family=IM+Fell+DW+Pica:ital,wght@0,400;1,400&display=swap"
+      rel="stylesheet"
+    />
+    <!-- Keep existing font for fallback -->
+    <link
+      href="https://fonts.googleapis.com/css?family=Saira+Extra+Condensed:500,700"
+      rel="stylesheet"
+    />
+    <link
+      href="https://fonts.googleapis.com/css?family=Muli:400,400i,800,800i"
+      rel="stylesheet"
+    />
+    <link href="../vendor/fontawesome-free/css/all.min.css" rel="stylesheet" />
+    <link href="../vendor/font-mfizz-2.4.1/font-mfizz.css" rel="stylesheet" />
 
-  <!-- Bootstrap core CSS -->
-  <link href="../vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+    <!-- Custom styles for this template -->
+    <link href="../css/resume.css" rel="stylesheet" />
+    <link href="../css/portfolio.css" rel="stylesheet" />
+    <link href="../css/icon_photo.css" rel="stylesheet" />
 
-  <!-- Custom fonts for this template -->
-  <link href="https://fonts.googleapis.com/css?family=Saira+Extra+Condensed:500,700" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css?family=Muli:400,400i,800,800i" rel="stylesheet">
-  <link href="../vendor/fontawesome-free/css/all.min.css" rel="stylesheet">
-  <link href="../vendor/font-mfizz-2.4.1/font-mfizz.css" rel="stylesheet">
+    <!-- Pagination Style Sheet -->
+    <link href="../css/pagination.css" rel="stylesheet" />
+  </head>
 
-  <!-- Custom styles for this template -->
-  <link href="../css/resume.css" rel="stylesheet">
-  <link href="../css/portfolio.css" rel="stylesheet">
-  <link href="../css/icon_photo.css" rel="stylesheet">
-
-  <!-- Pagination Style Sheet -->
-  <link href="../css/pagination.css" rel="stylesheet">
-
-</head>
-
-<body id="page-top">
-  <!-- Left Side Navigation Menu -->
-  <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top" id="sideNav">
-    <a class="navbar-brand js-scroll-trigger" href="#page-top">
-      <span class="d-block d-lg-none">Sam Shatzkin</span>
-      <span class="d-none d-lg-block">
-        <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="..\img\ProfilePic.png" alt="">
-      </span>
-    </a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      <ul class="navbar-nav">
-        <li class="nav-item">
-          <a class="nav-link js-scroll-trigger" href="../index.html#portfolio">Return</a>
-        </li>
-        <!--
+  <body id="page-top">
+    <!-- Left Side Navigation Menu -->
+    <nav
+      class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top"
+      id="sideNav"
+    >
+      <a class="navbar-brand js-scroll-trigger" href="#page-top">
+        <span class="d-block d-lg-none">Sam Shatzkin</span>
+        <span class="d-none d-lg-block">
+          <img
+            class="img-fluid img-profile rounded-circle mx-auto mb-2"
+            src="..\img\ProfilePic-drawing.png"
+            alt=""
+          />
+        </span>
+      </a>
+      <button
+        class="navbar-toggler"
+        type="button"
+        data-toggle="collapse"
+        data-target="#navbarSupportedContent"
+        aria-controls="navbarSupportedContent"
+        aria-expanded="false"
+        aria-label="Toggle navigation"
+      >
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav">
+          <li class="nav-item">
+            <a class="nav-link js-scroll-trigger" href="../index.html#portfolio"
+              >Return</a
+            >
+          </li>
+          <!--
         <li class="nav-item">
           <a class="nav-link js-scroll-trigger" href="#EB">Early Bird</a>
         </li>
@@ -67,49 +102,40 @@
             </div>
           </div>
         </li>
-        -->
-      </ul>
+        --></ul>
+      </div>
+    </nav>
+
+    <!-- Content -->
+    <div class="container-fluid p-0">
+      <!-- Load portfolio item -->
+      <div id="includedContent"></div>
+
+      <hr class="m-0" />
     </div>
-  </nav>
 
-  <!-- Content -->
-  <div class="container-fluid p-0">
-
-    <!-- Load portfolio item -->
-    <div id="includedContent"></div>
-
-    <hr class="m-0">
-
-  </div>
-
-  <!-- Pagination Menu -->
-  <div class="pag_center">
-    <div class="pagination">
+    <!-- Pagination Menu -->
+    <div class="pag_center">
+      <div class="pagination"></div>
     </div>
-  </div>
 
-  <!-- Bootstrap core JavaScript -->
-  <script src="../vendor/jquery/jquery.min.js"></script>
-  <script src="../vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+    <!-- Bootstrap core JavaScript -->
+    <script src="../vendor/jquery/jquery.min.js"></script>
+    <script src="../vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
 
-  <!-- Plugin JavaScript -->
-  <script src="../vendor/jquery-easing/jquery.easing.min.js"></script>
+    <!-- Plugin JavaScript -->
+    <script src="../vendor/jquery-easing/jquery.easing.min.js"></script>
 
-  <!-- Loading included content -->
-  <script src="../js/include.js"></script>
+    <!-- Loading included content -->
+    <script src="../js/include.js"></script>
 
-  <!-- Custom scripts for this template -->
-  <script src="../js/resume.min.js"></script>
-  
+    <!-- Custom scripts for this template -->
+    <script src="../js/resume.min.js"></script>
 
-  <!-- Mustache.js for Templating   -->
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/mustache.js/2.3.0/mustache.min.js"></script>
+    <!-- Mustache.js for Templating   -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/mustache.js/2.3.0/mustache.min.js"></script>
 
-  <!-- Pagination JS -->
-  <script src="../js/pagination.js"></script>
-
-
-
-</body>
-
+    <!-- Pagination JS -->
+    <script src="../js/pagination.js"></script>
+  </body>
 </html>
